<resources>
    <!--Name of App-->
    <string name="app_name">Expensio</string>
    <!--Placeholder for Username text input-->
    <string name="email">Email</string>
    <!--Placeholder for Password text input-->
    <string name="password">Password</string>
    <!--Placeholder for Login text input-->
    <string name="login">Login</string>
    <!--Placeholder for Register text input-->
    <string name="register">Create Account</string>
    <!--Placeholder for Forgot Password text input-->
    <string name="forgot_password">Forgot Password?</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="location_enabled">Location Enabled</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="privacy">Privacy</string>
    <string name="general">General</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>

    <string name="name">Name</string>
    <string name="home_fragment_label">Overview</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="choose_name_fragment_label">Name</string>

    <string name="wallet_name">Wallet name</string>
    <string name="wallet_name_hint">Enter wallet name</string>
    <string name="currency">Currency</string>
    <string name="currency_hint">Select currency</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">Enter amount</string>
    <string name="color">Color</string>
    <string name="color_hint">Select color</string>
    <string name="save_wallet">Save Wallet</string>
    <string name="toast_wallet_created">Wallet created successfully</string>
    <string name="toast_wallet_creation_failed">Failed to create wallet</string>
    <string name="toast_fill_all_fields">Please fill all the fields</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_dark_mode_title">Dark Mode</string>
    <string name="drawer_light_mode_title">Light Mode</string>

    <string name="recurrence_label">Recurrence</string>


    <string name="recurrence_prompt">Select recurrence</string>

    <string name="selected_month_year">%1$s %2$d</string>
    <string name="income_summary">Income Transactions: %1$d\nTotal Amount: %2$s</string>
    <string name="expense_summary">Expense Transactions: %1$d\nTotal Amount: %2$s</string>


</resources>