<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    android:minWidth="350dp"
    android:minHeight="200dp"
    android:background="@drawable/rounded_box">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Wallet"
        android:textSize="18dp"
        android:textColor="@color/colorTextPrimary" />

    <EditText
        android:id="@+id/wallet_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/wallet_name"
        android:paddingStart="15dp"/>

    <EditText
        android:id="@+id/currency_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/currency"
        android:paddingStart="15dp"/>

    <EditText
        android:id="@+id/amount_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/amount"
        android:paddingStart="15dp"/>

    <Button
        android:id="@+id/color_button"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:textColor="@color/colorPageBackground"
        android:layout_marginTop="16dp"
        android:text="Select a Color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/register_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorPageBackground"
            android:background="@drawable/login_button"
            android:text="Save" />

    </LinearLayout>

</LinearLayout>
