<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    android:paddingHorizontal="20dp"
    android:paddingTop="50dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/emailTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:boxStrokeWidthFocused="0dp"
        android:textColorHint="@color/colorTextPrimary"
        app:boxStrokeWidth="0dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/icon_email"
        app:startIconTint="@color/colorTextPrimary"
        app:startIconContentDescription="@string/email"
        app:startIconCheckable="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        app:hintEnabled="true"
        android:textColorHint="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/icon_key"
        app:startIconTint="@color/colorTextPrimary"
        app:startIconContentDescription="@string/email"
        app:startIconCheckable="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:background="@drawable/rounded_edit_text"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:layout_marginTop="15dp"
        app:hintEnabled="true"
        android:textColorHint="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:startIconDrawable="@drawable/icon_key"
        app:startIconTint="@color/colorTextPrimary"
        app:startIconContentDescription="Confirm Password"
        app:startIconCheckable="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:background="@drawable/rounded_edit_text"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        android:text="@string/register"
        android:textColor="@color/colorPageBackground"
        android:textSize="17sp"
        android:textFontWeight="800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInputLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
